# remote-eink

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  README.md  openapi.yml  pyproject.toml
.github/workflows/: main.yml
cicd/docker/tester/: Dockerfile
cicd/jobs/setup/: build-tester.sh
cicd/jobs/test/: run-python-style-check.sh  run-python-tests.sh  run-upload-codecov.sh
docs/subrepos/swagger-ui/: .gitrepo  package-lock.json
docs/swagger-ui/: index.html  oauth2-redirect.html  swagger-ui-bundle.js  swagger-ui-bundle.js.map  swagger-ui-standalone-preset.js  swagger-ui-standalone-preset.js.map  swagger-ui.css  swagger-ui.css.map  swagger-ui.js  swagger-ui.js.map
image_display_service/: common.py  image.py  resolver.py  storage.py  web_api.py
image_display_service/api/: display.py
image_display_service/api/display/: __init__.py  _common.py  current_image.py  display.py  image.py  sleep.py
image_display_service/display/: controllers.py  drivers.py
image_display_service/storage/: image_stores.py  manifest_stores.py
image_display_service/tests/: test_image.py  test_storage.py
image_display_service/tests/api/: _common.py  test_display.py  test_image.py  test_sleep.py
image_display_service/tests/storage/: _common.py  test_image_stores.py  test_manifests_stores.py
remote_eink/: app.py  app_data.py  app_storage.py  common.py  controllers.py  events.py  images.py  models.py  multiprocess.py  resolver.py  server.py  temp.py  tmp_run.py  web_api.py
remote_eink/api/display/: __init__.py  _common.py  current_image.py  display.py  image.py  image_transformer.py  sleep.py
remote_eink/api/display/image/: __init__.py  _common.py  data.py  image.py  metadata.py
remote_eink/controllers/: base.py  cycling.py  simple.py
remote_eink/display/: controllers.py  drivers.py
remote_eink/drivers/: base.py  local.py  papertty.py  proxy.py
remote_eink/examples/: local_display.py
remote_eink/storage/: image_stores.py  images.py  manifest_stores.py  manifests.py
remote_eink/storage/image/: base.py  file_system.py  memory.py
remote_eink/storage/manifest/: base.py  memory.py  tiny_db.py
remote_eink/tests/: _common.py  _resources.py  test_app.py  test_controllers.py  test_events.py  test_image.py  test_images.py  test_models.py  test_server.py
remote_eink/tests/api/: _common.py  test_display.py  test_image.py  test_sleep.py
remote_eink/tests/api/display/: test_current_image.py  test_display.py  test_image.py  test_image_transformer.py  test_sleep.py
remote_eink/tests/api/display/image/: _common.py  test_data.py  test_image.py  test_metadata.py
remote_eink/tests/controllers/: _common.py  test_cycling.py  test_simple.py
remote_eink/tests/display/: test_controllers.py
remote_eink/tests/drivers/: _common.py  test_base.py  test_proxy.py
remote_eink/tests/storage/: _common.py  test_image_stores.py  test_images.py  test_manifests.py  test_manifests_stores.py
remote_eink/tests/storage/image/: _common.py  test_base.py  test_file_system.py  test_images.py  test_memory.py
remote_eink/tests/transformers/: _common.py  test_base.py  test_proxy.py  test_rotate.py  test_sequence.py  test_simple.py  test_transformers.py
remote_eink/transformers/: __init__.py  base.py  common.py  proxy.py  rotate.py  sequence.py  simple.py  transformers.py
scripts/test/: run-python-style-check.sh  run-python-tests.sh  run-upload-codecov.sh
